Fix always visible scroll bar

--- a/assets/scss/_syntax.scss
+++ b/assets/scss/_syntax.scss
@@ -20,7 +20,7 @@
     color: var(--text) !important;
     border-radius: 4px;
     max-width: 100%;
-    overflow-x: scroll;
+    overflow-x: auto;
   }
 
   table {
